Added the statistics page

--- a/src/main/resources/com/example/knk_grupi22/dashboard.fxml
+++ b/src/main/resources/com/example/knk_grupi22/dashboard.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DashboardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1350.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DashboardController">
    <children>
       <AnchorPane fx:id="dashboardPane" prefHeight="200.0" prefWidth="1020.0">
          <children>
@@ -76,23 +76,23 @@
                         <Font name="Georgia Bold" size="30.0" />
                      </font>
                   </Label>
-                  <Button fx:id="statistics_Btn" layoutX="24.0" layoutY="372.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: linear-gradient(to left, #373B44, #4286f4); -fx-cursor: hand;" text="Manage" textFill="WHITE">
+                  <Button fx:id="statistics_Btn" layoutX="24.0" layoutY="372.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: linear-gradient(to left, #373B44, #4286f4); -fx-cursor: hand;" text="Statistics" textFill="WHITE">
                      <font>
                         <Font name="Tahoma Bold" size="20.0" />
                      </font>
                      <graphic>
-                        <FontAwesomeIcon fill="WHITE" glyphName="FILE" size="1.3em" />
+                        <FontAwesomeIcon fill="WHITE" glyphName="LINE_CHART" size="1.3em" />
                      </graphic>
                   </Button>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="273.0" layoutY="219.0" maxHeight="462.0" maxWidth="1016.0" prefHeight="455.0" prefWidth="958.0" stylesheets="@../../../css/dashboard.css">
+            <AnchorPane layoutX="273.0" layoutY="219.0" maxHeight="462.0" maxWidth="1016.0" prefHeight="455.0" prefWidth="1016.0" stylesheets="@../../../css/dashboard.css">
                <styleClass>
                   <String fx:value="shadow" />
                   <String fx:value="chart" />
                </styleClass>
                <children>
-                  <PieChart fx:id="totalEmployedChart" layoutX="-1.0" layoutY="14.0" prefHeight="455.2" prefWidth="509.6" title="GENDER CHART" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <PieChart fx:id="totalEmployedChart" layoutX="10.0" layoutY="10.0" prefHeight="445.0" prefWidth="945.0" title="GENDER CHART" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="5.0" />
                </children>
             </AnchorPane>
             <HBox layoutX="273.0" layoutY="14.0" maxHeight="180.0" maxWidth="1034.0" prefHeight="180.0" prefWidth="1016.0" style="-fx-background-color: linear-gradient(to left, #3E5151, #DECBA4); -fx-background-radius: 15px;;" styleClass="shadow" stylesheets="@../../../css/dashboard.css">
