--- a/src/main/resources/com/example/knk_grupi22/forgotPassword.fxml
+++ b/src/main/resources/com/example/knk_grupi22/forgotPassword.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="326.0" prefWidth="521.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ForgotPasswordController">
+<AnchorPane prefHeight="326.0" prefWidth="521.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ForgotPasswordController">
    <children>
       <AnchorPane fx:id="emailPane" layoutX="148.0" layoutY="100.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
